{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "c2addff3-0d6c-42d1-b287-b13a0a3f2522",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "4f5d59b9-334f-4f5d-8a8d-31d183291a2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d8b7b4de-df05-4826-aa20-dfa590e81f3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "f128afc4-5e05-4876-b32f-5260a59c1f0a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "c1943cc2-dcb4-4a18-b02a-c89e6764f19e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "e05c5c27-906c-4237-989f-02f2187daeab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6e9a04b3-bbc7-4da2-8a02-9e57b6a5391f",
                    "path": "<Keyboard>/m",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboards",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99f52ea8-c292-4a30-8a7e-e99210f4aef2",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboards",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "0ded1225-cba3-40f3-a18a-21f9d0e49b19",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left",
                    "id": "a20e2a9e-7e84-4fda-b82d-22b0b248164e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboards",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "ddebd470-a240-4862-acf1-9b3d5405c05e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboards",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f93b25e1-3c11-463e-85ea-bbbab7743b88",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboards",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a5e1c31-f9fe-4c73-8030-4d995868b179",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboards",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboards",
            "bindingGroup": "Keyboards",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}